Cache dependency setters per type for custom property handlers. Use immutable collection builders when creating values for iterable property types. Misc cleanup.